--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
     </div>
 
     <div class="section">
-      <p><span class="label">Permanent Address:</span><span class="info">31, SHIVNAGAR I, KATARGAM SINGANPORE ROAD, BH ASHOK NAGAR, SURAT, GUJARAT-395004</span></p>
-      <p><span class="label">Address at Birth:</span><span class="info">C/O YOS, KGISL METROPOLIS, CHIL SEZ IT PARK, KEERANATHAM ROAD, SARAVANAMPATTI P.O., COIMBATORE SOUTH, COIMBATORE - TAMIL NADU - 641035</span></p>
+      <p><span class="label">Permanent Address:</span><span class="info">31, SHIVNAGAR SOCIETY - 1, KATARGAM SINGANPORE ROAD, B/H ASHOK NAGAR, SURAT, GUJARAT-395004</span></p>
+      <p><span class="label">Address at Birth:</span><span class="info">CA705, KGISL METROPOLIS, CHIL SEZ IT PARK, KEERANATHAM ROAD, SARAVANAMPATTI, COIMBATORE SOUTH, COIMBATORE, TAMIL NADU - 641035</span></p>
     </div>
 
     <div class="section">
