Update department name and parent names in index.html

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <img src="logo3.png" alt="Logo 3">
     </div>
     <h1>Government of Tamil Nadu</h1>
-    <h2>Department of Public Health and Preventive Medicine</h2>
+    <h2>Department of Health and Family Welfare</h2>
     <hr>
 
     <div class="section">
@@ -64,8 +64,8 @@
     </div>
 
     <div class="section">
-      <p><span class="label">Father's Name:</span><span class="info">JADAV SUNIL VRAJLAL</span></p>
-      <p><span class="label">Mother's Name:</span><span class="info">JADAV VISHAKHA SUNIL</span></p>
+      <p><span class="label">Father's Name:</span><span class="info">SUNIL VRAJLAL JADAV</span></p>
+      <p><span class="label">Mother's Name:</span><span class="info">VISHAKHA SUNIL JADAV</span></p>
     </div>
 
     <div class="section">
