--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8">
   <title>Birth Certificate</title>
   <style>
     body {
-      font-family: "Times New Roman", serif;
+      font-family: 'Times New Roman', serif;
       margin: 40px;
       background: #f9f9f9;
     }
@@ -17,7 +16,6 @@
       max-width: 800px;
       margin: auto;
     }
-
     /* Header with left/right logos */
     .header {
       display: flex;
@@ -36,7 +34,6 @@
       text-align: center;
       padding: 0 10px;
     }
-
     h1, h2 {
       text-align: center;
       margin: 0;
@@ -50,7 +47,14 @@
     .info {
       margin-left: 10px;
     }
-
+    .logos {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+    .logos img {
+      margin: 0 10px;
+      width: 100px;
+    }
     /* Print */
     @media print {
       body { background: #fff; margin: 0; }
@@ -63,14 +67,14 @@
     <!-- Top header with two logos -->
     <div class="header">
       <!-- If your file name has spaces, encode them as %20 -->
-      <img class="logo" src="logo1.png" alt="Seal of Gujarat" />
+      <img class="logo" src="logo1.png" alt="Seal of Tamil Nadu" />
       <div class="title">
         <h1>Government of Tamil Nadu</h1>
         <h2>Department of Health and Family Welfare</h2>
       </div>
       <img class="logo" src="logo2.png" alt="Birth and Death" />
     </div>
-    <hr />
+    <hr>
 
     <div class="section">
       <p><span class="label">District:</span><span class="info">COIMBATORE</span></p>
